орнамент в секції About-us

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,262 +1,211 @@
-
 .about-text {
-    color: rgba(252, 249, 249, 0.4);
-    font-family: Manrope;
-    font-size: 16px;
-    line-height: normal;
-    letter-spacing: 0.04em;
-    margin-bottom: 20px;
-    margin-right: 50px;
+  color: rgba(252, 249, 249, 0.4);
+  font-family: Manrope;
+  font-size: 16px;
+  line-height: normal;
+  letter-spacing: 0.04em;
+  margin-bottom: 20px;
+  margin-right: 50px;
+}
+.about-text-next {
+  color: rgba(252, 249, 249, 0.4);
+  font-family: Manrope;
+  font-size: 16px;
+  line-height: normal;
+  letter-spacing: 0.04em;
+  margin-right: 50px;
+}
+
+.about-title {
+  color: #fcf9f9;
+  font-family: Manrope;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.45; /* 145.455% */
+  letter-spacing: 0.03em;
+  color: #fcf9f9;
+  margin-bottom: 40px;
+}
+
+.about-section {
+  background-image: url(../img/about/./about-us-background.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 545px 454px;
+}
+
+/* Read More */
+details {
+  position: relative;
+}
+
+details summary {
+  display: block;
+  cursor: pointer;
+  color: rgb(194, 191, 191);
+}
+
+details summary:focus {
+  outline: none;
+}
+
+details[open] {
+  display: block;
+  padding-bottom: 25px;
+  padding-top: 10px;
+  animation: open 400ms linear;
+}
+
+details[open] summary {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+details[open] #open {
+  display: none;
+}
+
+details #close {
+  display: none;
+}
+
+details[open] #close {
+  display: block;
+}
+
+::-webkit-details-marker {
+  display: none;
+}
+
+@keyframes open {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
   }
-  .about-text-next {
-      color: rgba(252, 249, 249, 0.4);
-      font-family: Manrope;
-      font-size: 16px;
-      line-height: normal;
-      letter-spacing: 0.04em;
-      margin-right: 50px;
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  
-  .about-title {
-    color: #fcf9f9;
-    font-family: Manrope;
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 1.45; /* 145.455% */
-    letter-spacing: 0.03em;
-    color: #fcf9f9;
-    margin-bottom: 40px;
+}
+/* /Read More */
+
+@media screen and (max-width: 768px) {
+  .about-section {
+    background-color: #1c2225;
   }
-  
-  
-  .about-container {
-      background-image:url(../img/about/./about-us-background.png);
-      background-repeat: no-repeat;
-      background-position: right bottom;
-      background-size: 545px 454px;
-      background-origin: border-box;
-  }
-  
-  
-  /* Read More */
-  details {
-      position: relative;
-  }
-  
-  
-  details summary {
-      display: block;
-      cursor: pointer;
-      color: rgb(194, 191, 191);
-  }
-  
-  
-  details summary:focus {
-      outline: none;
-  }
-  
-  
-  details[open] {
-      display: block;
-      padding-bottom: 25px;
-      padding-top: 10px;
-      animation: open 400ms linear;
-  }
-  
-  
-  details[open] summary {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-  }
-  
-  
-  details[open] #open {
-      display: none;
-  }
-  
-  
-  details #close {
-      display: none;
-  }
-  
-  
-  details[open] #close {
-      display: block;
-  }
-  
-  
-  ::-webkit-details-marker {
-      display: none;
-  }
-  
-  
-  @keyframes open {
-      0% {
-          opacity: 0;
-          transform: translateY(-10px);
-      }
-  
-  
-      100% {
-          opacity: 1;
-          transform: translateY(0);
-      }
-  }
-  /* /Read More */
-  
-  
-  
-  
-  @media screen and (max-width: 768px) {
-      .about-section {
-          background-color: #1C2225;
-      }
-  }
-  
-  
-  @media screen and (min-resolution: 192dpi) and (max-width: 767px),
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
   screen and (min-resolution: 2dppx) and (max-width: 767px),
   screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
-      .about-section {
-          background-color: #1C2225;
-      }
+  .about-section {
+    background-color: #1c2225;
   }
-  
-  
-  @media screen and (min-width: 768px) {
-      .about-section {
-          background-color: #1C2225;
-      }
-  
-  
+}
+
+@media screen and (min-width: 768px) {
+  .about-section {
+    background-color: #1c2225;
   }
-  
-  
-  @media screen and (min-resolution: 192dpi) and (min-width: 768px),
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
   screen and (min-resolution: 2dppx) and (min-width: 768px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
-      .about-section {
-          background-color: #1C2225;
-      }
+  .about-section {
+    background-color: #1c2225;
   }
-  
-  
-  @media screen and (min-width: 1200px) {
-      .about-section {
-          background-color: #1C2225;
-      }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-section {
+    background-color: #1c2225;
   }
-  
-  
-  @media screen and (min-resolution: 192dpi) and (min-width: 1200px),
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1200px),
   screen and (min-resolution: 2dppx) and (min-width: 1200px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 1200px) {
-      .about-section {
-          background-color: #1C2225;
-      }
+  .about-section {
+    background-color: #1c2225;
   }
-  
-  
-  
-  
-  /*========MOBILE STYLE==========*/
-  
-  
-  @media screen and (max-width: 767px) {
-      .about-container {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          padding-bottom: 62px;
-          padding-top: 40px;
-      }
-  
-  
-      .about-image {
-          margin-top: 50px;
-      }
-      .about-text-next {
-   display: none;
-      }
-     
-      .about-container {
-          background-image:url(../img/about/./about-us-background.png);
-      background-repeat: no-repeat;
-      background-position: right bottom;
-      background-origin: border-box;
-      background-size: 459px 408px;
-      background-position: 105px 400px;
-      }
-  
-  
-  
-  
-  }
-  /*===========TABLET STYLE============*/
-  
-  
-  @media screen and (min-width: 768px) {
-      .about-container {
-          padding-bottom: 50px;
-          padding-top: 50px;
-      }
-  
-  
-      .about-text-container {
-          padding: 0;
-      }
-  
-  
-      .about-title {
-          font-size: 44px;
-      }
-  
-  
-      .about-text {
-          font-size: 16px;
-      }
-  
-  
-      .about-image {
-          margin-top: 40px;
-      }
-      .about-text-next {
-          display: none;
-             }
-  }
-  
-  
-  
-  
-  /*==========DECSTOP STYLE=============*/
-  
-  
-  @media screen and (min-width: 1280px) {
-      .about-container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 1080px;
-          padding-bottom: 75px;
-          padding-top: 75px;
-      }
-  
-      .about-image {
-          margin: 0;
-      }
-      details {
-          display: none;
-      }
-      .about-text-next {
-          display: flex;
-             }
-  }
-  
-  
-  
-  
-  
-  
+}
 
+/*========MOBILE STYLE==========*/
+
+@media screen and (max-width: 767px) {
+  .about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 62px;
+    padding-top: 40px;
+  }
+
+  .about-image {
+    margin-top: 50px;
+  }
+  .about-text-next {
+    display: none;
+  }
+
+  .about-section {
+    background-image: url(../img/about/about-us-background.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: 459px 409px;
+    background-position: -150% 100%;
+  }
+}
+/*===========TABLET STYLE============*/
+
+@media screen and (min-width: 768px) {
+  .about-container {
+    padding-bottom: 50px;
+    padding-top: 50px;
+  }
+
+  .about-text-container {
+    padding: 0;
+  }
+
+  .about-title {
+    font-size: 44px;
+  }
+
+  .about-text {
+    font-size: 16px;
+  }
+
+  .about-image {
+    margin-top: 40px;
+  }
+  .about-text-next {
+    display: none;
+  }
+}
+
+/*==========DECSTOP STYLE=============*/
+
+@media screen and (min-width: 1280px) {
+  .about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1080px;
+    padding-bottom: 75px;
+    padding-top: 75px;
+  }
+
+  .about-image {
+    margin: 0;
+  }
+  details {
+    display: none;
+  }
+  .about-text-next {
+    display: flex;
+  }
+}
