--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -7,16 +7,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          sizes="(min-width: 1280px) 346px, (min-width: 768px) 342px, (max-width: 768px) 335px"
+          sizes="(min-width: 1280px) 346px, (min-width: 768px) 335px, (max-width: 768px) 335px"
           srcset="
-            ../img/collection/collection-1-mobile.jpg         335w,
-            ../img/collection/collection-1-mobile@2x.jpg      335w,
-            ../img/collection/collection-1-desktop-max.jpg    342w,
-            ../img/collection/collection-1-desktop-max@2x.jpg 342w,
-            ../img/collection/collection-1-desktop-max.jpg    346w,
-            ../img/collection/collection-1-desktop-max@2x.jpg 346w
+            ./img/collection/collection-1-mobile.jpg         335w,
+            ./img/collection/collection-1-mobile@2x.jpg      670w,
+            ./img/collection/collection-1-desktop-max.jpg    346w,
+            ./img/collection/collection-1-desktop-max@2x.jpg 800w
           "
-          src="../img/collection/collection-1-mobile.jpg"
+          src="./img/collection/collection-1-mobile.jpg"
           alt="AUGUST Poltava women's blouseRING"
           width="335"
           height="430"
@@ -32,14 +30,12 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          sizes="(min-width: 1280px) 346px, (min-width: 768px) 342px, (max-width: 768px) 335px"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
           srcset="
-            ../img/collection/collection-2-mobile.jpg         335w,
-            ../img/collection/collection-2-mobile@2x.jpg      335w,
-            ../img/collection/collection-2-desktop-max.jpg    342w,
-            ../img/collection/collection-2-desktop-max@2x.jpg 342w,
-            ../img/collection/collection-2-desktop-max.jpg    346w,
-            ../img/collection/collection-2-desktop-max@2x.jpg 346w
+            ./img/collection/collection-2-mobile.jpg         335w,
+            ./img/collection/collection-2-mobile@2x.jpg      670w,
+            ./img/collection/collection-2-desktop-max.jpg    400w,
+            ./img/collection/collection-2-desktop-max@2x.jpg 800w
           "
           src="../img/collection/collection-2-mobile.jpg"
           alt="Women's blouse Gorgany"
@@ -55,14 +51,12 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          sizes="(min-width: 1280px) 346px, (min-width: 768px) 342px, (max-width: 768px) 335px"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
           srcset="
-            ../img/collection/collection-3-mobile.jpg         335w,
-            ../img/collection/collection-3-mobile@2x.jpg      335w,
-            ../img/collection/collection-3-desktop-max.jpg    342w,
-            ../img/collection/collection-3-desktop-max@2x.jpg 342w,
-            ../img/collection/collection-3-desktop-max.jpg    346w,
-            ../img/collection/collection-3-desktop-max@2x.jpg 346w
+            ./img/collection/collection-3-mobile.jpg         335w,
+            ./img/collection/collection-3-mobile@2x.jpg      670w,
+            ./img/collection/collection-3-desktop-max.jpg    400w,
+            ./img/collection/collection-3-desktop-max@2x.jpg 800w
           "
           src="../img/collection/collection-3-mobile.jpg"
           alt="Women's blouse Crimea"
@@ -78,14 +72,12 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          sizes="(min-width: 1280px) 346px, (min-width: 768px) 342px, (max-width: 768px) 335px"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
           srcset="
-            ../img/collection/collection-4-mobile.jpg         335w,
-            ../img/collection/collection-4-mobile@2x.jpg      335w,
-            ../img/collection/collection-4-desktop-max.jpg    342w,
-            ../img/collection/collection-4-desktop-max@2x.jpg 342w,
-            ../img/collection/collection-4-desktop-max.jpg    346w,
-            ../img/collection/collection-4-desktop-max@2x.jpg 346w
+            ./img/collection/collection-4-mobile.jpg         335w,
+            ./img/collection/collection-4-mobile@2x.jpg      670w,
+            ./img/collection/collection-4-desktop-max.jpg    400w,
+            ./img/collection/collection-4-desktop-max@2x.jpg 800w
           "
           src="../img/collection/collection-4-mobile.jpg"
           alt="Men's shirt Verkhovina"
@@ -101,14 +93,12 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          sizes="(min-width: 1280px) 346px, (min-width: 768px) 342px, (max-width: 768px) 335px"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
           srcset="
-            ../img/collection/collection-5-mobile.jpg         335w,
-            ../img/collection/collection-5-mobile@2x.jpg      335w,
-            ../img/collection/collection-5-desktop-max.jpg    342w,
-            ../img/collection/collection-5-desktop-max@2x.jpg 342w,
-            ../img/collection/collection-5-desktop-max.jpg    346w,
-            ../img/collection/collection-5-desktop-max@2x.jpg 346w
+            ./img/collection/collection-5-mobile.jpg         335w,
+            ./img/collection/collection-5-mobile@2x.jpg      670w,
+            ./img/collection/collection-5-desktop-max.jpg    400w,
+            ./img/collection/collection-5-desktop-max@2x.jpg 800w
           "
           src="../img/collection/collection-5-mobile.jpg"
           alt="Mountain men's shirt"
@@ -124,14 +114,12 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          sizes="(min-width: 1280px) 346px, (min-width: 768px) 342px, (max-width: 768px) 335px"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
           srcset="
-            ../img/collection/collection-6-mobile.jpg         335w,
-            ../img/collection/collection-6-mobile@2x.jpg      335w,
-            ../img/collection/collection-6-desktop-max.jpg    342w,
-            ../img/collection/collection-6-desktop-max@2x.jpg 342w,
-            ../img/collection/collection-6-desktop-max.jpg    346w,
-            ../img/collection/collection-6-desktop-max@2x.jpg 346w
+            ./img/collection/collection-6-mobile.jpg         335w,
+            ./img/collection/collection-6-mobile@2x.jpg      670w,
+            ./img/collection/collection-6-desktop-max.jpg    400w,
+            ./img/collection/collection-6-desktop-max@2x.jpg 800w
           "
           src="../img/collection/collection-6-mobile.jpg"
           alt="Men's shirt Yasens"
