--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -37,7 +37,7 @@
             ./img/collection/collection-2-desktop-max.jpg    400w,
             ./img/collection/collection-2-desktop-max@2x.jpg 800w
           "
-          src="../img/collection/collection-2-mobile.jpg"
+          src="./img/collection/collection-2-mobile.jpg"
           alt="Women's blouse Gorgany"
           width="335"
           height="430"
@@ -58,7 +58,7 @@
             ./img/collection/collection-3-desktop-max.jpg    400w,
             ./img/collection/collection-3-desktop-max@2x.jpg 800w
           "
-          src="../img/collection/collection-3-mobile.jpg"
+          src="./img/collection/collection-3-mobile.jpg"
           alt="Women's blouse Crimea"
           width="335"
           height="430"
@@ -79,7 +79,7 @@
             ./img/collection/collection-4-desktop-max.jpg    400w,
             ./img/collection/collection-4-desktop-max@2x.jpg 800w
           "
-          src="../img/collection/collection-4-mobile.jpg"
+          src="./img/collection/collection-4-mobile.jpg"
           alt="Men's shirt Verkhovina"
           width="335"
           height="430"
@@ -100,7 +100,7 @@
             ./img/collection/collection-5-desktop-max.jpg    400w,
             ./img/collection/collection-5-desktop-max@2x.jpg 800w
           "
-          src="../img/collection/collection-5-mobile.jpg"
+          src="./img/collection/collection-5-mobile.jpg"
           alt="Mountain men's shirt"
           width="335"
           height="430"
@@ -121,7 +121,7 @@
             ./img/collection/collection-6-desktop-max.jpg    400w,
             ./img/collection/collection-6-desktop-max@2x.jpg 800w
           "
-          src="../img/collection/collection-6-mobile.jpg"
+          src="./img/collection/collection-6-mobile.jpg"
           alt="Men's shirt Yasens"
           width="335"
           height="430"
