--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -7,7 +7,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="./img/collection/collection-1-mobile@2x.jpg"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
+          srcset="
+            ./img/collection/collection-1-mobile.jpg         335w,
+            ./img/collection/collection-1-mobile@2x.jpg      670w,
+            ./img/collection/collection-1-desktop-max.jpg    400w,
+            ./img/collection/collection-1-desktop-max@2x.jpg 800w
+          "
+          src="./img/collection/collection-1-mobile.jpg"
           alt="AUGUST Poltava women's blouseRING"
           width="335"
           height="430"
@@ -23,7 +30,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="./img/collection/collection-2-mobile@2x.jpg"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
+          srcset="
+            ./img/collection/collection-2-mobile.jpg         335w,
+            ./img/collection/collection-2-mobile@2x.jpg      670w,
+            ./img/collection/collection-2-desktop-max.jpg    400w,
+            ./img/collection/collection-2-desktop-max@2x.jpg 800w
+          "
+          src="./img/collection/collection-2-mobile.jpg"
           alt="Women's blouse Gorgany"
           width="335"
           height="430"
@@ -37,7 +51,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="./img/collection/collection-3-mobile@2x.jpg"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
+          srcset="
+            ./img/collection/collection-3-mobile.jpg         335w,
+            ./img/collection/collection-3-mobile@2x.jpg      670w,
+            ./img/collection/collection-3-desktop-max.jpg    400w,
+            ./img/collection/collection-3-desktop-max@2x.jpg 800w
+          "
+          src="./img/collection/collection-3-mobile.jpg"
           alt="Women's blouse Crimea"
           width="335"
           height="430"
@@ -51,7 +72,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="./img/collection/collection-4-mobile@2x.jpg"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
+          srcset="
+            ./img/collection/collection-4-mobile.jpg         335w,
+            ./img/collection/collection-4-mobile@2x.jpg      670w,
+            ./img/collection/collection-4-desktop-max.jpg    400w,
+            ./img/collection/collection-4-desktop-max@2x.jpg 800w
+          "
+          src="./img/collection/collection-4-mobile.jpg"
           alt="Men's shirt Verkhovina"
           width="335"
           height="430"
@@ -65,7 +93,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="./img/collection/collection-5-mobile@2x.jpg"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
+          srcset="
+            ./img/collection/collection-5-mobile.jpg         335w,
+            ./img/collection/collection-5-mobile@2x.jpg      670w,
+            ./img/collection/collection-5-desktop-max.jpg    400w,
+            ./img/collection/collection-5-desktop-max@2x.jpg 800w
+          "
+          src="./img/collection/collection-5-mobile.jpg"
           alt="Mountain men's shirt"
           width="335"
           height="430"
@@ -79,7 +114,14 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="./img/collection/collection-6-mobile@2x.jpg"
+          sizes="(min-width: 1280px) 400px, (min-width: 768px) 335px, (max-width: 768px) 335px"
+          srcset="
+            ./img/collection/collection-6-mobile.jpg         335w,
+            ./img/collection/collection-6-mobile@2x.jpg      670w,
+            ./img/collection/collection-6-desktop-max.jpg    400w,
+            ./img/collection/collection-6-desktop-max@2x.jpg 800w
+          "
+          src="./img/collection/collection-6-mobile.jpg"
           alt="Men's shirt Yasens"
           width="335"
           height="430"
