--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,29 +6,50 @@ main {
 	flex-grow: 1;
 }
 
-.footer-menu {
+.footer {
 	border-top: 1px solid rgba(252, 249, 249, 0.10);
-	background-image: url(../img/footer/footer-background.png);
-	background-repeat: no-repeat;
-	background-size: 450px 400px;
-	background-position-y: 175%;
-	background-position-x: 50%;
+	position: relative;
 }
 
+
+.footer-ornament {
+	background-image: url(../img/footer/footer-background.png);
+	background-size: 450px 400px;
+	position: absolute;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 212px;
+	background-position: 50% top;
+	top: 70%;
+}
+
+/*  орнамент не прилипає до лівого краю тому, 
+що задана фіксована ширина щоб відповідало макету і не виникало нижнього скролу*/
 @media screen and (min-width: 768px) {
-	.footer-menu {
-		background-position-y: 50%;
-		background-position-x: 185%;
+	.footer-ornament {
+		width: 175px;
+		height: 100%;
+		background-position: left;
+		top: 0;
+		left: 78%;
 	}
 }
 
 @media screen and (min-width: 1280px) {
-	.footer-menu {
-		background-size: 595px 527px;
-		background-position-y: 40%;
-		background-position-x: 138%;
+	.footer-ornament {
+		background-size: 594px 527px;
+		width: 496px;
+		background-position: left 80%;
+		left: 56.5%;
 	}
 }
+
+/* @media screen and (min-width: 1440px) {
+	.footer-ornament {
+		background-position: left 40%;
+		left: 70%;
+	}
+} */
 
 @media screen and (min-resolution: 192dpi) and (min-width: 320px),
 screen and (min-resolution: 2dppx) and (min-width: 320px),
