--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+  <div class="footer-ornament"></div>
   <div class="footer-menu container">
     <ul class="header-nav-list footer-list">
       <li class="header-nav-list-item">
@@ -23,4 +24,5 @@
       embroidery
     </p>
   </div>
+  <div class="footer-background"></div>
 </footer>
