--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -69,6 +69,11 @@
 
 @media screen and (min-width: 768px) {
 
+.hero-section {
+        padding-top: 100px;
+        padding-bottom: 50px;
+    }
+
 .hero-title{
     font-size: 54px;
     font-weight: 400;
@@ -156,6 +161,10 @@
 /* Desktop 1280*/
 
 @media screen and (min-width: 1280px) {
+
+.hero-section {
+        padding-bottom: 75px;
+    }
 
 .hero{
     display: flex;
