--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -2,24 +2,27 @@
   <div class="container">
     <img
       class="your-order-images"
-      src="./img/order/order-background-desktop-max.jpg"
+      src="./img/order/order-background-mobile.jpg"
+      sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, (max-width: 767px) 375px"
       srcset="
-      ./img/order/order-background-desktop-max@2x.jpg
-      ./img/order/order-background-desktop-min.jpg
-      ./img/order/order-background-desktop-min@2x.jpg
-      ./img/order/order-background-mobile.jpg
-      ./img/order/order-background-mobile@2x.jpg
-      ./img/order/order-background-tablet.jpg
-      ./img/order/order-background-tablet@2x.jpg"
+      ./img/order/order-background-desktop-min.jpg 1280w,
+      ./img/order/order-background-desktop-min@2x.jpg 2560w,
+      ./img/order/order-background-mobile.jpg 375w,
+      ./img/order/order-background-mobile@2x.jpg 750w,
+      ./img/order/order-background-tablet.jpg 768w,
+      ./img/order/order-background-tablet@2x.jpg 1536w" 
       alt="a_girl_in_a_green_dress"
     />
     <div class="your-order-container">
       <img
         class="your-order-picture"
-        src="./img/order/order-img-desktop.jpg"
-        srcset="./img/order/order-img-desktop@2x.jpg
-        ./img/order/order-img-tablet.jpg
-        ./img/order/order-img-tablet@2x.jpg"
+        src="./img/order/order-img-tablet.jpg"
+        sizes="(min-width: 768px) and (max-width: 1279px) 523px, (min-width: 1280px) 524px"
+        srcset="
+        ./img/order/order-img-tablet.jpg 523w,
+        ./img/order/order-img-tablet@2x.jpg 1046w,
+        ./img/order/order-img-desktop.jpg 524w,
+        ./img/order/order-img-desktop@2x.jpg 1048w"
         alt="dress_and_waistcoat"
       />
     
@@ -37,7 +40,7 @@
             type="name"
             class="your-order-input"
             name="username"
-            placeholder="Enter_your_full_name" 
+            placeholder="Enter your full name" 
             autofocus
           ></input></label>
         </div>
@@ -62,7 +65,7 @@
             ></textarea>
           </label>
           <button class="your-order-btn" href="index.html" type="pattern">
-            Send<svg class="your-order-icon" width="26" height="10">
+            Send<svg class="your-order-icon" width="36" height="20">
               <use href="./img/sprite.svg#icon-arrow"></use>
             </svg>
           </button>
