--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -108,7 +108,7 @@
     padding-bottom: 50px;
     background-image: url(../img/order/your-order-background.png);
     background-repeat: no-repeat;
-    background-position: -209px 1430px;
+    background-position: left bottom;
     background-size: 545px 484px;
   }
 
