--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,7 +1,7 @@
 <!-- ============Our collection===============-->
 
 <section class="our-collection" id="collection">
-  <div class="container-our-collection container">
+  <div class="container-our-collection container collection-container">
     <h2 class="our-collection-title">Our collection</h2>
     <ul class="our-collection-list">
       <li class="our-collection-images">
