--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,5 +1,5 @@
 <section class="your-order-section" id="order">
-  <div class="container">
+  <div class="container main-order-container">
     <img
       class="your-order-images"
       src="./img/order/order-background-mobile.jpg"
