--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
           Reviving the traditional
           <span class="hero-two">Ukrainian</span> artistry in every stitch.
         </h1>
-        <a class="button" href="#Your order">
+        <a class="button" href="#order">
           Order
           <svg width="36" height="20">
             <use href="./img/sprite.svg#icon-arrow"></use>
