--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -65,7 +65,7 @@
               rows="10"
               cols="35"
             ></textarea>
-            <button class="your-order-btn" type="button">
+            <button class="your-order-btn" type="submit">
               Send<svg class="your-order-icon" width="36" height="20">
                 <use href="./img/sprite.svg#icon-arrow"></use>
               </svg>
