--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -54,7 +54,7 @@ main {
 @media screen and (min-resolution: 192dpi) and (min-width: 320px),
 screen and (min-resolution: 2dppx) and (min-width: 320px),
 screen and (min-device-pixel-rario: 2) and (min-width:320px) {
-	.footer-menu {
+	.footer-ornament {
 		background-image: url(../img/footer/footer-background@2x.png);
 	}
 }
