--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -43,6 +43,7 @@
               class="your-order-input"
               name="user-name"
               placeholder="Enter your full name"
+              id="user-name"
               autofocus
             />
           </div>
@@ -53,6 +54,7 @@
               class="your-order-input"
               name="user-email"
               placeholder="Enter your email"
+              id="user-email"
             />
           </div>
           <div>
