--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,13 +1,21 @@
 /* Mobile */
 
-.container{
+.hero-section {
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+
+.hero-container {
     padding-left: 20px;
     padding-right: 20px;
-    display: flex;
-    flex-wrap: nowrap;
+    position: relative;
 }
 
 .images{
+    display: none;
+}
+
+.work {
     display: none;
 }
 
@@ -18,7 +26,6 @@
     line-height: 1.2; 
     letter-spacing: -0.03em;
     width: 335px;
-    margin-top: 60px;
     margin-bottom: 20px;
 }
 
@@ -35,7 +42,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
+    line-height: 0;
     letter-spacing: -0.04em;
     text-transform: uppercase;
     display: inline-flex;
@@ -57,38 +64,17 @@
     border: 1px solid var(--yellow, #ECD979);
   }
 
-@media screen and (min-width: 480px) {
-    .container{
-        width: 375px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
 
 /* Tablet */
 
 @media screen and (min-width: 768px) {
-    .container{
-        width: 768px;
-    }
-}
-
-
-.container{
-    padding-left: 32px;
-    padding-right: 32px;
-    display: flex;
-    flex-wrap: nowrap;
-}
 
 .hero-title{
     font-size: 54px;
-    font-style: normal;
     font-weight: 400;
     line-height: 1.2; 
     letter-spacing: -0.03em;
     width: 549px;
-    margin-top: 106px;
     margin-bottom: 40px;
     margin-right: 40px;
 }
@@ -96,7 +82,6 @@
 .hero-two{
     color: #ECD979;
     font-size: 54px;
-    font-style: normal;
     font-weight: 400;
     line-height: 1.2;
     letter-spacing: -0.03em;
@@ -105,9 +90,7 @@
 .button{
     color: #FCF9F9;
     font-size: 16px;
-    font-style: normal;
     font-weight: 600;
-    line-height: normal;
     letter-spacing: -0.04em;
     text-transform: uppercase;
     display: flex;
@@ -130,29 +113,39 @@
 
   .images{
     display: block;
-    margin-top: 80px;
+    position: absolute;
+    bottom: -98px;
+    right: 32px; 
     border: none;
     width: 139px;
     height: 197px;
     flex-shrink: 0;
     background-image: url(../img/hero/small.jpg);
     background-repeat: no-repeat;
-    background-position: top;
-    object-fit: scale-down;
     border-radius: 50%;
 }
 
 .work{
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    position: absolute;
+    top: -26px;
+    right: 32px;
 }
 
 .star{
     display: flex;
     align-items: center;
     justify-content: center;
+    fill: #ECD979;
+    transition: fill 500ms linear, transform 500ms ease-in-out;
+}
+
+.star:hover{
+    fill: #FCF9F9;
+    transform: rotate(180deg);
 }
 
 .title{
@@ -165,67 +158,31 @@
     letter-spacing: -0.04em;
     max-width: 115px;
 }
+}
 
 /* Desktop 1280*/
 
 @media screen and (min-width: 1280px) {
-    .container{
-        width: 1280px;
-    }
-}
 
 .hero{
     display: flex;
     flex-direction: row-reverse;
-}
-
-.container{
-    padding-left: 100px;
-    padding-right: 100px;
-    display: flex;
-    flex-wrap: nowrap;
+    justify-content: flex-end;
 }
 
 .hero-title{
     font-size: 54px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.2; 
-    letter-spacing: -0.03em;
     width: 518px;
-    margin-top: 194px;
+    margin-top: 94px;
     margin-bottom: 40px;
-    margin-right: 15px;
 }
 
 .hero-two{
     color: #ECD979;
     font-size: 54px;
-    font-style: normal;
     font-weight: 400;
     line-height: 1.2;
     letter-spacing: -0.03em;
-}
-
-.button{
-    color: #FCF9F9;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: -0.04em;
-    text-transform: uppercase;
-    display: flex;
-    width: 168px;
-    padding: 14px 39px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 15px;
-    border: 1px solid rgba(252, 249, 249, 0.10);
-    margin-bottom: 40px;
-    margin-left: 141px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -235,35 +192,16 @@
 
 .girl{
     display: flex;
-    margin-top: 100px;
     margin-right: 40px;
 }
 
   .images{
-    display: block;
-    margin-top: 114px;
-    border: none;
-    width: 139px;
-    height: 197px;
-    flex-shrink: 0;
-    background-image: url(../img/hero/small.jpg);
-    background-repeat: no-repeat;
-    background-position: top;
-    object-fit: scale-down;
-    border-radius: 50%;
+    right: 96px;
 }
 
 .work{
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-}
-
-.star{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    top: 14px;
+    right: 100px;
 }
 
 .title{
@@ -276,3 +214,5 @@
     letter-spacing: -0.04em;
     max-width: 115px;
 }
+}
+
