--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,7 +32,7 @@
     <div class="images"></div>
     <div class="work">
       <svg class="star" width="52" height="51">
-        <use href="./img/sprite.svg#icon-star"></use>
+        <use class="star-svg" href="./img/sprite.svg#icon-star"></use>
       </svg>
       <p class="title">all embroidery is made by hand</p>
     </div>
